--- a/mobile/app/src/main/res/values/styles.xml
+++ b/mobile/app/src/main/res/values/styles.xml
@@ -5,4 +5,43 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="FRItemAirport">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">64dp</item>
+    </style>
+
+    <style name="FRItemAirportBlock">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:layout_marginTop">11dp</item>
+        <item name="android:layout_marginBottom">11dp</item>
+    </style>
+
+    <style name="FRText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="FRText.Large">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="FRText.Large.Selected">
+        <item name="android:textColor">#2e2e2e</item>
+    </style>
+
+    <style name="FRText.Small">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="FRText.Small.Blue">
+        <item name="android:textColor">#2091eb</item>
+    </style>
+
+    <style name="FRText.Small.Gray">
+        <item name="android:textColor">#ababab</item>
+    </style>
+
 </resources>
